커뮤니티 병합 전으로 롤백